# python-screenshots

./: .gitignore  README.md  pyproject.toml  screen.py
python_screenshots/: screenshots.py
