[tool.poetry]
name = "python_screenshots"
version = "0.0.1"
description = "A dead simple Python script to create screenshots"
authors = ["Ilya Krukowski <golosizpru@gmail.com>"]
readme = "README.md"
license = "Beerware"
repository = "https://github.com/bodrovis-learning/python-screenshots"
documentation = "https://github.com/bodrovis-learning/python-screenshots"
keywords = ["screenshots"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
keyboard = "^0.13.5"
mss = "^9.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"
autopep8 = "^2.0"
pyinstaller = "^6.3.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bodrovis-learning/python-screenshots/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"